--- a/ublox_msgs/package.xml
+++ b/ublox_msgs/package.xml
@@ -13,7 +13,7 @@
   <license>BSD</license>
   <url>http://ros.org/wiki/ublox</url>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
   <build_depend>rosidl_default_generators</build_depend>
 
